Edge model now working

--- a/Examples/run_test_edge_domain.ipynb
+++ b/Examples/run_test_edge_domain.ipynb
@@ -40,7 +40,7 @@
     "    p_a = P,            # Pa pressure air\n",
     "    RH = RH,            # relative humidity air\n",
     "    w_amb = HAPropsSI('W','T',T_a+273.15,'P',P,'R', RH),          # kg/kg water vapor moisture content\n",
-    "    rho_amb = 1.2,      # kg/m^3 density air\n",
+    "    rho_amb = 1.0 / HAPropsSI(\"Vha\",\"T\",T_a+273.15,\"P\",P,\"R\",RH),      # kg/m^3 density air\n",
     "    v_kin = 1.5e-5,     # m^2/s kinematic viscosity air\n",
     "    lam = 0.025,        # W/mK heat conduction coefficient air\n",
     "    c_p_a = 1000,       # J/kgK heat capacity air\n",
@@ -52,18 +52,18 @@
     "    T_w = T_w,          # °C wall temperature\n",
     "\n",
     "    # ice data\n",
-    "    rho_i = 920,        # kg/m^3 frost density (solid)\n",
-    "    h_sub= 334,         # kJ/kg latent heat of ablimation for water vapor\n",
+    "    rho_i = 920,        # kg/m^3 ice density\n",
+    "    h_sub= 2830000,     # J/kg latent heat of ablimation for water vapor\n",
     "\n",
     "    # numerics\n",
-    "    t_end = 40,      # s endtime\n",
-    "    dt = 0.1              # s time step\n",
+    "    t_end = 60*10,      # s endtime\n",
+    "    dt = 5           # s time step\n",
     ")\n",
     "\n",
     "geom = FinnTubedHX(\n",
     "    n_fin = 4,           # -\n",
     "    l_fin = 0.022,          # m\n",
-    "    d_fin = 0.0002,    # m\n",
+    "    fin_thickness = 0.0002,    # m\n",
     "    fin_pitch = 0.0032,          # m\n",
     "    d_tube_a = 0.00952,          # m\n",
     "    tube_thickness = 0.025       # m\n",
@@ -71,8 +71,8 @@
     "\n",
     "gs = GridShape(\n",
     "    nx = 100,\n",
-    "    nr = 200,\n",
-    "    ntheta = 5\n",
+    "    nr = 100,\n",
+    "    ntheta = 90\n",
     ")\n",
     "\n",
     "plot.plot_finned_tube_side(geom)"
@@ -125,7 +125,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "plot_r = 50\n",
+    "plot_r = int(gs.nr/2)\n",
     "plot_theta = 0\n",
     "plot_time = int(max(results.data['t']) / cfg.dt)\n",
     "\n",
@@ -143,6 +143,11 @@
     "              x=results.data['t'],y=results.data['rho_e'],\n",
     "             xlabel=\"Zeit [s]\", ylabel=\"Dichte [kg/m^3]\",\n",
     "             title=f\"Frostdichte bei r_idx = {plot_r} und θ_idx = {plot_theta}\",\n",
+    "             r_idx=plot_r, theta_idx=plot_theta, marker=None)\n",
+    "plot.plot_any(kind=\"time vs 2D(r,theta)\",\n",
+    "              x=results.data['t'],y=results.data['rho_a'],\n",
+    "             xlabel=\"Zeit [s]\", ylabel=\"Dichte der trockenen Luft [kg/m^3]\",\n",
+    "             title=f\"Dichte der trockenen Luft bei r_idx = {plot_r} und θ_idx = {plot_theta}\",\n",
     "             r_idx=plot_r, theta_idx=plot_theta, marker=None)\n",
     "plot.plot_any(kind=\"time vs 2D(r,theta)\",\n",
     "              x=results.data['t'],y=results.data['w_e'],\n",
