--- a/Examples/run_test_edge_domain.ipynb
+++ b/Examples/run_test_edge_domain.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-07T18:51:01.537652Z",
-     "start_time": "2025-11-07T18:50:59.061269Z"
+     "end_time": "2025-11-07T19:09:25.396760Z",
+     "start_time": "2025-11-07T19:09:17.507597Z"
     }
    },
    "source": [
@@ -35,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T18:51:01.660796Z",
-     "start_time": "2025-11-07T18:51:01.552622Z"
+     "end_time": "2025-11-07T19:09:25.786518Z",
+     "start_time": "2025-11-07T19:09:25.449103Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-07T19:05:27.467903Z",
-     "start_time": "2025-11-07T18:51:01.676403Z"
+     "end_time": "2025-11-07T19:27:57.949278Z",
+     "start_time": "2025-11-07T19:09:25.936707Z"
     }
    },
    "cell_type": "code",
@@ -321,23 +321,29 @@
       "Time Step: 91\t Time: 450.0 s | 7.5 min \n",
       "Edge Domain Inner Iterations: 69 \t w: 4.170e-10 \t T: 4.229e-06\n",
       "Time Step: 92\t Time: 455.0 s | 7.6 min \n",
-      "Edge Domain Inner Iterations: 80 \t w: 3.964e-10 \t T: 4.061e-06\n"
+      "Edge Domain Inner Iterations: 80 \t w: 3.964e-10 \t T: 4.061e-06\n",
+      "Time Step: 93\t Time: 460.0 s | 7.7 min \n",
+      "Edge Domain Inner Iterations: 94 \t w: 4.058e-10 \t T: 4.198e-06\n",
+      "Time Step: 94\t Time: 465.0 s | 7.8 min \n",
+      "Edge Domain Inner Iterations: 115 \t w: 3.821e-10 \t T: 3.992e-06\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mKeyboardInterrupt\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m sim_run:\n\u001B[32m      2\u001B[39m     sim = Simulator(fields=(\u001B[33m\"\u001B[39m\u001B[33mt\u001B[39m\u001B[33m\"\u001B[39m,\u001B[33m\"\u001B[39m\u001B[33ms_e\u001B[39m\u001B[33m\"\u001B[39m))\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m     results = \u001B[43msim\u001B[49m\u001B[43m.\u001B[49m\u001B[43mrun\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcfg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgeom\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mFrostmodell_V1\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\OneDrive\\Dokumente\\GitHub\\MSE_VT1_luethluk\\Framework_V3\\runtime\\simulator.py:20\u001B[39m, in \u001B[36mSimulator.run\u001B[39m\u001B[34m(self, cfg, geom, gs, model)\u001B[39m\n\u001B[32m     18\u001B[39m \u001B[38;5;28;01mwhile\u001B[39;00m t <= cfg.t_end:\n\u001B[32m     19\u001B[39m     st.t = t\n\u001B[32m---> \u001B[39m\u001B[32m20\u001B[39m     \u001B[38;5;28miter\u001B[39m, res_T, res_w = \u001B[43mmodel\u001B[49m\u001B[43m.\u001B[49m\u001B[43mNew_edge_state_seg_diverg_form\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcfg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgeom\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mst\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     21\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33mTime Step: \u001B[39m\u001B[33m\"\u001B[39m + \u001B[38;5;28mstr\u001B[39m(it) +\n\u001B[32m     22\u001B[39m           \u001B[33m\"\u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[33m Time: \u001B[39m\u001B[33m\"\u001B[39m + \u001B[33mf\u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mt\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.1f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m'\u001B[39m +\n\u001B[32m     23\u001B[39m           \u001B[33m\"\u001B[39m\u001B[33m s | \u001B[39m\u001B[33m\"\u001B[39m + \u001B[33mf\u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mt/\u001B[32m60\u001B[39m\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.1f\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m'\u001B[39m +\n\u001B[32m     24\u001B[39m           \u001B[33m\"\u001B[39m\u001B[33m min \u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[33mEdge Domain Inner Iterations: \u001B[39m\u001B[33m\"\u001B[39m + \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28miter\u001B[39m) +\n\u001B[32m     25\u001B[39m           \u001B[33m\"\u001B[39m\u001B[33m \u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[33m w: \u001B[39m\u001B[33m\"\u001B[39m + \u001B[33mf\u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mres_w\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.3e\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m'\u001B[39m +\n\u001B[32m     26\u001B[39m           \u001B[33m\"\u001B[39m\u001B[33m \u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[33m T: \u001B[39m\u001B[33m\"\u001B[39m + \u001B[33mf\u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mres_T\u001B[38;5;132;01m:\u001B[39;00m\u001B[33m.3e\u001B[39m\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m'\u001B[39m)\n\u001B[32m     28\u001B[39m     \u001B[38;5;28mself\u001B[39m.rec.push_from_state(st)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\OneDrive\\Dokumente\\GitHub\\MSE_VT1_luethluk\\Framework_V3\\models\\Frostmodell_V1.py:330\u001B[39m, in \u001B[36mFrostmodell_Edge.New_edge_state_seg_diverg_form\u001B[39m\u001B[34m(self, cfg, geom, st, gs, tol, niter)\u001B[39m\n\u001B[32m    327\u001B[39m b_w[N - \u001B[32m1\u001B[39m] = \u001B[38;5;28mfloat\u001B[39m(w_sat_clip_vec(Tfs_old))\n\u001B[32m    329\u001B[39m \u001B[38;5;66;03m# Solve ω und unterrelaxieren (Gauss–Seidel-Kopplung ω→T)\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m330\u001B[39m w_f_new[:, j] = \u001B[43mspsolve\u001B[49m\u001B[43m(\u001B[49m\u001B[43mcsr_matrix\u001B[49m\u001B[43m(\u001B[49m\u001B[43mA_w\u001B[49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mb_w\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    331\u001B[39m w_f_old[:, j] = (\u001B[32m1.0\u001B[39m - omega_w) * w_f_old[:, j] + omega_w * w_f_new[:, j]\n\u001B[32m    333\u001B[39m \u001B[38;5;66;03m# Surface-Flüsse jetzt mit FRISCHEM ω\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~\\OneDrive\\Dokumente\\GitHub\\MSE_VT1_luethluk\\.venv\\Lib\\site-packages\\scipy\\sparse\\linalg\\_dsolve\\linsolve.py:286\u001B[39m, in \u001B[36mspsolve\u001B[39m\u001B[34m(A, b, permc_spec, use_umfpack)\u001B[39m\n\u001B[32m    284\u001B[39m indptr = A.indptr.astype(np.intc, copy=\u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[32m    285\u001B[39m options = \u001B[38;5;28mdict\u001B[39m(ColPerm=permc_spec)\n\u001B[32m--> \u001B[39m\u001B[32m286\u001B[39m x, info = \u001B[43m_superlu\u001B[49m\u001B[43m.\u001B[49m\u001B[43mgssv\u001B[49m\u001B[43m(\u001B[49m\u001B[43mN\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mA\u001B[49m\u001B[43m.\u001B[49m\u001B[43mnnz\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mA\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdata\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindices\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mindptr\u001B[49m\u001B[43m,\u001B[49m\n\u001B[32m    287\u001B[39m \u001B[43m                        \u001B[49m\u001B[43mb\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mflag\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43moptions\u001B[49m\u001B[43m=\u001B[49m\u001B[43moptions\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    288\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m info != \u001B[32m0\u001B[39m:\n\u001B[32m    289\u001B[39m     warn(\u001B[33m\"\u001B[39m\u001B[33mMatrix is exactly singular\u001B[39m\u001B[33m\"\u001B[39m, MatrixRankWarning, stacklevel=\u001B[32m2\u001B[39m)\n",
+      "\u001B[31mKeyboardInterrupt\u001B[39m: "
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {},
